[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.raw-window-handle]
version = "~0.4"
optional = false
features = []
default_features = false

[dependencies.winit]
version = "0.29.0"
default_features = false
optional = false
features = ["rwh_04"]

[dependencies]
glium = "0.34.0"
image = "0.24"
glutin = "0.31.3"
obj = "0.10.2"
glutin-winit = "0.4.2"
